update index, github link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="https:/blog.johnamata.com/bookshelf" target="_blank">read</a
           >, <a href="https://blog.johnamata.com" target="_blank">write</a>, and
           <span class="blinking-background">
-            <a href="https://archive.is/9MloV" target="_blank">hack</a>
+            <a href="https://github.com/xjpa" target="_blank">hack</a>
           </span>
           for fun
         </span>
@@ -48,7 +48,6 @@
                 data-description="
                 <p>operating system from scratch, named after a puppy my parents adopted</p>
                 <img src='https://raw.githubusercontent.com/xjpa/starOS/main/hello.png' target='_blank'>
-                <p>link: <a href='https://github.com/xjpa/starOS'>github</a></p>
                 <p>utilized: C/C++, Assembly</p>
                 "
                 >starOS</a
@@ -62,7 +61,6 @@
                 data-title="gattiDB"
                 data-description="
                 <p>building a database + db server from scratch to learn database internals well, as well as to practice multithreading. implementing indexing, search, defrag, etc.</p>
-                <p>link: <a href='https://github.com/xjpa/gattidb'>github</a></p>
                 <p>utiized: Java</p>"
                 >gattiDB</a
               >
@@ -75,7 +73,6 @@
                 data-title="TreeCache"
                 data-description="
                 <p>simple in-memory b-tree based noSQL like database, written in one afternoon after reading a page of Designing Data Intensive Applications (DDIA)</p>
-                <p>link: <a href='https://github.com/xjpa/treecache'>github</a></p>
                 <p>Utiized: JavaScript</p>"
                 >TreeCache</a
               >
