--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>
         <span class="intro">
           i
-          <a href="https:/blog.johnamata.com/bookshelf" target="_blank">read</a
+          <a href="https://blog.johnamata.com/bookshelf" target="_blank">read</a
           >, <a href="https://blog.johnamata.com" target="_blank">write</a>, and
           <span class="blinking-background">
             <a href="https://github.com/xjpa" target="_blank">hack</a>
