--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           src="https://xjpa-assets-2023.netlify.app/music/gladiator-theme-song.mp3"
           type="audio/mpeg"
         />
-        Your browser does not support the audio element.
       </audio>
       <p>
         <span class="intro">
@@ -61,7 +60,7 @@
                 data-title="gattiDB"
                 data-description="
                 <p>building a database + db server from scratch to learn database internals well, as well as to practice multithreading. implementing indexing, search, defrag, etc.</p>
-                <p>utiized: Java</p>"
+                <p>utilized: Java</p>"
                 >gattiDB</a
               >
             </p>
@@ -73,7 +72,7 @@
                 data-title="TreeCache"
                 data-description="
                 <p>simple in-memory b-tree based noSQL like database, written in one afternoon after reading a page of Designing Data Intensive Applications (DDIA)</p>
-                <p>Utiized: JavaScript</p>"
+                <p>Utilized: JavaScript</p>"
                 >TreeCache</a
               >
             </p>
@@ -106,9 +105,29 @@
                 data-title="caldera"
                 data-description="
                 <p>building a 3d graphics engine</p>
-                <p>utilized: C, SDL2</p>
+                <p>utilized: C++, SDL2</p>
                 "
                 >caldera</a
+              >
+            </p>
+          </blockquote>
+        </div>
+      </section>
+      <!-- #web -->
+      <section>
+        <p>- <span class="blue toggle-details">web</span></p>
+        <div class="expanding-details">
+          <blockquote class="details-content">
+            <p>
+              -
+              <a
+                href="#"
+                class="project-link"
+                data-title="asset management"
+                data-description="
+                <p>building a platform for asset management similar to systems like Palantir Gotham for a PH government entity; on-prem deployment</p>
+                "
+                >asset management</a
               >
             </p>
           </blockquote>
