--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="https://blog.johnamata.com/bookshelf" target="_blank">read</a
           >, <a href="https://blog.johnamata.com" target="_blank">write</a>, and
           <span class="blinking-background">
-            <a href="https://github.com/xjpa" target="_blank">hack</a>
+            <a href="https://paulgraham.com/gba.html" target="_blank">hack</a>
           </span>
           for fun
         </span>
@@ -46,12 +46,53 @@
                 data-title="starOS"
                 data-description="
                 <p>operating system from scratch, named after a puppy my parents adopted</p>
-                <img src='https://raw.githubusercontent.com/xjpa/starOS/main/hello.png' target='_blank'>
                 <p>utilized: C/C++, Assembly</p>
                 "
                 >starOS</a
               >
             </p>
+            <p>
+              -
+              <a
+                href="#"
+                class="project-link"
+                data-title="Kyogre"
+                data-description="
+                <p>Highly optimized quantitative trading engine, optimizations focused mainly on compute (e.g. vectorization)</p>
+                <p>utilized: Python, Numpy</p>
+                "
+                >kyogre</a
+              >
+            </p>
+          </blockquote>
+        </div>
+      </section>
+      <!-- #computation -->
+      <section>
+        <p>- <span class="blue toggle-details">computation</span></p>
+        <div class="expanding-details">
+          <blockquote class="details-content">
+            <p>
+              -
+              <a
+                href="#"
+                class="project-link"
+                data-title="HtDP and SICP"
+                data-description="
+                <p>various projects and solutions for two classic CS books, How to Design Programs aka HtDP, and Structure and Interpretation of Computer Programs aka SICP</p>
+                <img src='https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1391032527i/43713.jpg'>
+                <p>utilized: Racket</p>"
+                >HtDP and SICP</a
+              >
+            </p>
+          </blockquote>
+        </div>
+      </section>
+      <!-- #web systems -->
+      <section>
+        <p>- <span class="blue toggle-details">web systems</span></p>
+        <div class="expanding-details">
+          <blockquote class="details-content">
             <p>
               -
               <a
@@ -76,46 +117,12 @@
                 >TreeCache</a
               >
             </p>
-            <p>
-              -
-              <a
-                href="#"
-                class="project-link"
-                data-title="moonchain"
-                data-description="
-                <p>multi-node blockchain implemented from scratch with consensus, transaction, wallet, async broadcasting, dynamic mining</p>
-                <p>utilized: Python, Flask</p>
-                "
-                >moonchain</a
-              >
-            </p>
-          </blockquote>
-        </div>
-      </section>
-      <!-- #graphics -->
-      <section>
-        <p>- <span class="blue toggle-details">graphics</span></p>
-        <div class="expanding-details">
-          <blockquote class="details-content">
-            <p>
-              -
-              <a
-                href="#"
-                class="project-link"
-                data-title="caldera"
-                data-description="
-                <p>building a 3d graphics engine</p>
-                <p>utilized: C++, SDL2</p>
-                "
-                >caldera</a
-              >
-            </p>
           </blockquote>
         </div>
       </section>
       <!-- #web -->
       <section>
-        <p>- <span class="blue toggle-details">web</span></p>
+        <p>- <span class="blue toggle-details">web apps</span></p>
         <div class="expanding-details">
           <blockquote class="details-content">
             <p>
@@ -123,9 +130,21 @@
               <a
                 href="#"
                 class="project-link"
-                data-title="asset management"
+                data-title="ungoog"
                 data-description="
-                <p>building a platform for asset management similar to systems like Palantir Gotham for a PH government entity; on-prem deployment</p>
+                <p>a distributed web search engine initially modelled after the google search engine <a href='https://research.google/pubs/the-anatomy-of-a-large-scale-hypertextual-web-search-engine/'>original paper</a>, added image search and designed for scaling</p>
+                "
+                >ungoog</a
+              >
+            </p>
+            <p>
+              -
+              <a
+                href="#"
+                class="project-link"
+                data-title="asset management system"
+                data-description="
+                <p>a platform for asset management similar to systems like Palantir Gotham, designed for a large organization (>2000); on-prem deployment</p>
                 "
                 >asset management</a
               >
