update, add some animations, gitignore some drafts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="modal.css" />
   </head>
   <body style="margin: 0; overflow: hidden">
+    <div class="background">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <script src="background.js"></script>
     <div style="position: fixed; top: 10px; left: 20px; z-index: 1000">
       <h2 id="welcome">Hello, I'm <a href="./assets/images/me.jpg">John</a></h2>
       <audio controls="" class="smaller-audio-player">
@@ -26,10 +33,8 @@
         <span class="intro">
           i
           <a href="https://blog.johnamata.com/bookshelf" target="_blank">read</a
-          >, <a href="https://blog.johnamata.com" target="_blank">write</a>, and
-          <span class="blinking-background">
-            <a href="https://paulgraham.com/gba.html" target="_blank">hack</a>
-          </span>
+          >, <a href="https://blog.johnamata.com" target="_blank">write</a>, &
+          <a href="https://paulgraham.com/gba.html" target="_blank">hack</a>
           for fun
         </span>
       </p>
@@ -153,7 +158,7 @@
         </div>
       </section>
       <aside>
-        <p>For now if you want to <span class="accent">contact</span> me</p>
+        <p>If you want to <span class="accent">contact</span> me</p>
         <p id="myText" onclick="changeText()">➠ [click to view email]</p>
       </aside>
       <div id="genericModal" class="modal">
