optimize performance - batch DOM insertions and cache generated tiles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <link rel="stylesheet" href="modal.css" />
   </head>
   <body style="margin: 0; overflow: hidden">
+    <p
+      class="hide-on-mobile"
+      style="
+        text-align: right;
+        font-size: 24px;
+        line-height: 1.5;
+        color: #333;
+        padding-right: 20px;
+      "
+    >
+      All things swept sole away— <br />This—is immensity<br />— Emily Dickinson
+    </p>
     <div class="background">
       <span></span>
       <span></span>
