add draggable polaroid modal + photos and pirate ship

--- a/index.html
+++ b/index.html
@@ -161,6 +161,53 @@
       </div>
     </div>
 
+    <!-- polaroids -->
+    <div id="polaroidModal" class="polaroid-modal" style="width: 300px">
+      <span class="polaroid-close">
+        <img
+          src="./assets/images/thumbtack.png"
+          alt="Close"
+          class="thumbtack-icon"
+        />
+      </span>
+      <div class="polaroid-frame">
+        <img src="./assets/images/doggo.jpeg" class="polaroid-image" />
+      </div>
+      <div class="polaroid-caption">
+        pirate <a href="https://xjpa.github.io/star/">doggo</a>
+      </div>
+    </div>
+    <div id="polaroidModal2" class="polaroid-modal" style="width: 500px">
+      <span class="polaroid-close">
+        <img
+          src="./assets/images/thumbtack.png"
+          alt="Close"
+          class="thumbtack-icon"
+        />
+      </span>
+      <div class="polaroid-frame">
+        <img src="./assets/images/friends.jpeg" class="polaroid-image" />
+      </div>
+      <div class="polaroid-caption">
+        with my crew, i'm the 3rd from the left
+      </div>
+    </div>
+    <div id="pirateShip" class="draggable-image">
+      <div class="polaroid-frame">
+        <img
+          src="assets/images/pirate.png"
+          alt="pirate ship"
+          class="pirate-image"
+        />
+      </div>
+      <div class="pirate-caption">
+        we are
+        <a href="https://youtu.be/g20mcmfkmOw?si=0wbZu99bOCiLavXI"
+          >modern day pirates</a
+        >
+      </div>
+    </div>
+
     <script src="text.js"></script>
     <script src="modal.js"></script>
     <script src="play.js"></script>
