--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John Patrick Amata</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="eagle.png" sizes="any" />
   </head>
   <body>
     <div id="page-container">
@@ -17,18 +18,19 @@
           <li>operating systems</li>
           <li>networking & distributed systems</li>
           <li>reinforcement learning & LLMs</li>
+          <li>business durability & risk management</li>
         </ul>
 
         <img
-          src="me-69-min.jpg"
-          alt="Picture of me skiing"
+          src="https://avatars.githubusercontent.com/u/163702070?v=4"
+          alt="me"
           style="max-width: 220px; height: auto; margin-top: 1.5em"
         />
 
         <p class="section" style="margin-top: 2em">
           <a href="https://blog.johnamata.com/about">more</a> |
-          <a href="https://github.com/xjpa">github</a> |
-          <a href="resources.html">resources</a>
+          <a href="travel.html">travel</a> |
+          <a href="projects.html">projects</a>
         </p>
       </div>
       <div id="column-right"></div>
