--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
 
         <img
-          src="https://avatars.githubusercontent.com/u/163702070?v=4"
+          src="./assets/me.png"
           alt="me"
           style="max-width: 220px; height: auto; margin-top: 1.5em"
         />
