--- a/travel.html
+++ b/travel.html
@@ -23,7 +23,7 @@
         <li>Austria</li>
       </ul>
       <img
-      src="./assets/me.jpg"
+      src="./assets/travel.jpg"
       alt="Picture of me skiing"
       style="max-width: 220px; height: auto; margin-top: 1.5em"
     />
