--- a/resources.html
+++ b/resources.html
@@ -101,7 +101,7 @@
     <div class="footer">
       <a href="https://blog.johnamata.com/about">contact</a> |
       <a href="https://github.com/xjpa">github</a> |
-      <a href="index.html">home</a>
+      <a href="/">home</a>
     </div>
   </body>
 </html>
