--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <p class="section" style="margin-top: 2em">
           <a href="https://blog.johnamata.com/about">more</a> |
-          <a href="travel.html">travel</a> |
-          <a href="projects.html">projects</a>
+          <a href="travel">travel</a> |
+          <a href="projects">projects</a>
         </p>
       </div>
       <div id="column-right"></div>
