--- a/travel.html
+++ b/travel.html
@@ -30,7 +30,7 @@
     </div>
     <div class="footer">
       <a href="https://blog.johnamata.com/about">contact</a> |
-      <a href="index.html">home</a>
+      <a href="/">home</a>
     </div>
   </body>
 </html>
