--- a/travel.html
+++ b/travel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resources - john patrick amata</title>
+    <title>travel - john patrick amata</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="eagle.png" sizes="any" />
   </head>
@@ -14,13 +14,13 @@
       <h1>Travel</h1>
       <p><a href="https://www.youtube.com/watch?v=FusIKjztap8">here, there, and everywhere</a>...</p>
       <ul>
-        <li>Philippines</li>
-        <li>Colombia</li>
-        <li>Japan</li>
-        <li>Singapore</li>
-        <li>China</li>
-        <li>Israel</li>
-        <li>Austria</li>
+        <li>Philippines (born)</li>
+        <li>China 2017</li>
+        <li>Singapore 2018</li>
+        <li>Israel 2019</li>
+        <li>Colombia 2022</li>
+        <li>Austria 2022</li>
+        <li>Japan 2024</li>
       </ul>
       <img
       src="./assets/travel.jpg"
