--- a/travel.html
+++ b/travel.html
@@ -14,13 +14,13 @@
       <h1>Travel</h1>
       <p><a href="https://www.youtube.com/watch?v=FusIKjztap8">here, there, and everywhere</a>...</p>
       <ul>
-        <li>Philippines (born)</li>
-        <li>China 2017</li>
-        <li>Singapore 2018</li>
-        <li>Israel 2019</li>
-        <li>Colombia 2022</li>
-        <li>Austria 2022</li>
-        <li>Japan 2024</li>
+        <li>Philippines</li>
+        <li>China</li>
+        <li>Singapore</li>
+        <li>Israel</li>
+        <li>Colombia</li>
+        <li>Austria</li>
+        <li>Japan</li>
       </ul>
       <img
       src="./assets/travel.jpg"
