--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <p class="section" style="margin-top: 2em">
           <a href="https://blog.johnamata.com/about">more</a> |
-          <a href="travel">travel</a> |
+          <a href="travel">travel</a> | <a href="./n">notes</a> |
           <a href="projects">projects</a>
         </p>
       </div>
