--- a/projects.html
+++ b/projects.html
@@ -11,27 +11,35 @@
     <div id="page-container">
       <div id="column-left"></div>
       <div id="column-center">
-      <h1>Personal Projects</h1>
-      <p>For maximum cyberpunk, play the following while browsing</p>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/8006547&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-      <h2>DLSU - Advanced Operating Systems</h2>
-      <ul>
-        <li>
-         Operating System from scratch in C and Assembly</li>
-         <li>Designed for pedagogical teaching similar to xv6, comes with an LLM service as pair programming educator, uniquely finetuned for the codebase and OS teaching
-        </li>
-      </ul>
-      <h2>DLSU - System Design</h2>
-      <ul>
-        <li>
-         distributed serverless e-commerce app
-        </li>
-      </ul>      
-    </div>
-    <div class="footer">
-      <a href="https://blog.johnamata.com/about">contact</a> |
-      <a href="https://github.com/xjpa">github</a> |
-      <a href="/">home</a>
+        <h1>As a man playeth</h1>
+        <p>
+          The search for
+          <a href="https://paulgraham.com/own.html">a project of one's own</a
+          >...
+        </p>
+        <div>
+          <h3>DLSU - Operating Systems</h3>
+          <ul>
+            <li>Operating System from scratch in C and Assembly</li>
+            <li>
+              Designed for pedagogical teaching similar to xv6, comes with an
+              LLM service as pair programming educator, uniquely finetuned for
+              the codebase and OS teaching
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>DLSU - System Design</h3>
+          <ul>
+            <li>distributed serverless e-commerce app</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer">
+        <a href="https://github.com/xjpa">github</a>
+        |
+        <a href="/">home</a>
+      </div>
     </div>
   </body>
 </html>
