--- a/n/codemaxxing.html
+++ b/n/codemaxxing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>codemaxxing protocol - john patrick amata</title>
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="icon" href="eagle.png" sizes="any" />
+    <link rel="icon" href="../eagle.png" sizes="any" />
   </head>
   <body>
     <div id="page-container">
@@ -13,10 +13,7 @@
       <div id="column-center">
         <h1>codemaxxing protocol</h1>
         <p>GM bros new meta for learning programming dropped</p>
-        <img
-          src="https://m.media-amazon.com/images/M/MV5BMjQyMTIyMjExOV5BMl5BanBnXkFtZTgwODkwNzI0OTE@._V1_.jpg"
-          class="full-image"
-        />
+        <img src="../assets/mechanic_ressurection.jpg" class="full-image" />
         <p>Only course you need is ChatGPT</p>
         <ol>
           <li>Download a CS paper</li>
@@ -80,10 +77,7 @@
           card software), whatever learning style fits best
         </p>
         <p>Lock in</p>
-        <img
-          src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjYS6W46NDURGrPuJC0TTx6Y64axy6sMwyJy6D71UzyqO0Adm9J0GcycNKcNe_1VQ8VN-tRog9EnVckU8B7cynhyphenhypheneKJDwalHARJXvPXU-hzZrqEe8RGtQ-rU4FADTZ3k4UqZ-zBuhDbFoM/s1600/1_1_MrRipley.jpg"
-          class="full-image"
-        />
+        <img src="../assets/talented_mr_ripley.jpg" class="full-image" />
         <hr />
         <p><i>this post was written in 2025.03.08</i></p>
       </div>
