--- a/n/index.html
+++ b/n/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>notes - john patrick amata</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="eagle.png" sizes="any" />
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="icon" href="../eagle.png" sizes="any" />
   </head>
   <body>
     <div id="page-container">
