--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>John Patrick Amata</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="eagle.png" sizes="any" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="page-container">
       <div id="column-left"></div>
       <div id="column-center">
-        <h1>john patrick amata</h1>
+        <h1 style="font-family: 'STIX Two Text', serif; font-style: italic">
+          john patrick amata
+        </h1>
 
         <p class="section">topics I'm currently exploring</p>
         <ul>
