--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,24 @@
     <title>projects - john patrick amata</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="eagle.png" sizes="any" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="page-container">
       <div id="column-left"></div>
       <div id="column-center">
-        <h1>As a man playeth</h1>
+        <h1
+          style="
+            font-family: 'STIX Two Text', serif;
+            font-style: italic;
+            font-weight: 400;
+          "
+        >
+          As a man playeth
+        </h1>
         <p>
           The search for
           <a href="https://paulgraham.com/own.html">a project of one's own</a
@@ -33,6 +45,25 @@
           <ul>
             <li>distributed serverless e-commerce app</li>
           </ul>
+        </div>
+        <hr />
+        <p>
+          just
+          <a href="https://youtu.be/sZ60bY2pJfo?si=FspO8ZmyHh2fRX70">lock in</a>
+          and
+          <a href="https://youtu.be/uoukCF9asUI?si=dHJT8hXhxrOVXcT4">show up</a
+          >, anon.
+        </p>
+        <div class="video-container">
+          <iframe
+            src="https://www.youtube.com/embed/ts2QSXVQnTk?si=yDnliR6S4TBJbsya"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          >
+          </iframe>
         </div>
       </div>
       <div class="footer">
