--- a/n/codemaxxing.html
+++ b/n/codemaxxing.html
@@ -82,7 +82,7 @@
         <p><i>this post was written in 2025.03.08</i></p>
       </div>
       <div class="footer">
-        <a href="https://blog.johnamata.com/about">contact</a> |
+        <a href="./index.html">notes</a> |
         <a href="../">home</a>
       </div>
     </div>
