--- a/recs.html
+++ b/recs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resources - john patrick amata</title>
+    <title>recs - john patrick amata</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="eagle.png" sizes="any" />
   </head>
@@ -100,7 +100,6 @@
     </div>
     <div class="footer">
       <a href="https://blog.johnamata.com/about">contact</a> |
-      <a href="https://github.com/xjpa">github</a> |
       <a href="/">home</a>
     </div>
   </body>
