--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <p class="section">topics I'm currently exploring</p>
         <ul>
-          <li>operating systems</li>
-          <li>networking & distributed systems</li>
+          <li>operating systems internals</li>
+          <li>distributed systems + web infra</li>
           <li>reinforcement learning & LLMs</li>
           <li>business durability & risk management</li>
         </ul>
