--- a/travel.html
+++ b/travel.html
@@ -11,8 +11,8 @@
     <div id="page-container">
       <div id="column-left"></div>
       <div id="column-center">
-      <h1>Travel</h1>
-      <p><a href="https://www.youtube.com/watch?v=FusIKjztap8">here, there, and everywhere</a>...</p>
+      <h1>See it all</h1>
+      <p>><a href="https://sive.rs/htl03">Always forward, never back</a></p>
       <ul>
         <li>Philippines</li>
         <li>China</li>
@@ -22,6 +22,7 @@
         <li>Austria</li>
         <li>Japan</li>
       </ul>
+      <hr>
       <img
       src="./assets/travel.jpg"
       alt="Picture of me skiing"
