--- a/n/codemaxxing.html
+++ b/n/codemaxxing.html
@@ -6,6 +6,10 @@
     <title>codemaxxing protocol - john patrick amata</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="icon" href="../eagle.png" sizes="any" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="page-container">
@@ -82,7 +86,7 @@
         <p><i>this post was written in 2025.03.08</i></p>
       </div>
       <div class="footer">
-        <a href="./index.html">notes</a> |
+        <a href="./">notes</a> |
         <a href="../">home</a>
       </div>
     </div>
