--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>words - john patrick amata</title>
-    <link rel="stylesheet" href="../styles.css" />
-    <link rel="icon" href="../eagle.png" sizes="any" />
-    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-
+    <title>John Patrick Amata</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="eagle.png" sizes="any" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="page-container">
       <div id="column-left"></div>
       <div id="column-center">
-      <h1  style="
-      font-family: 'STIX Two Text', serif;
-      font-style: italic;
-      font-weight: 400;
-    ">Words</h1>
-      <p><i>For Nym, he hath heard of <a href="https://www.enotes.com/topics/henry-5/quotes/men-few-words-best-men">men of few words</a>...</i></p>
-      <ul>
-        <li>2025.08.10 <a href="./arsenalmaxxing">physique</a></li>
-        <li>2025.04.01 <a href="./prelude">prelude</a></li>
-      </ul>
-      <hr>
-      <p>lifemaxxing notes for myself</p>
-    </div>
-    <div class="footer">
-      <a href="https://blog.johnamata.com/about">contact</a> |
-      <a href="/">home</a>
+        <h1 style="font-family: 'STIX Two Text', serif; font-style: italic">
+          ∫∅ℎℕ patrick amata
+        </h1>
+
+        <p class="section">
+          i build AI systems then surf<br />topics that interest me most:
+        </p>
+        <ul>
+          <li>artificial intelligence (AI) 🤖🧠</li>
+          <li>business & startups 📈📈📈</li>
+          <li>discipline + performance 🎯⚡</li>
+          <li>rock climbing & running 🧗‍♂️🏔️🏃</li>
+          <li>brazilian jiu jitsu & boxing 🥋🤼‍♂️🐍</li>
+        </ul>
+        <p>
+          technical musings:
+          <a href="https://blog.johnamata.com/">blog.johnamata.com</a>
+        </p>
+        <p>full stack from systems to revenue</p>
+        <a href="./assets/me-profile.jpg"
+          ><img
+            src="./assets/me-profile.jpg"
+            alt="me"
+            style="max-width: 220px; height: auto"
+        /></a>
+        <p><a href="fast">i learn + ship fast</a>. let's execute.</p>
+        <p class="section" style="margin-top: 2em">
+          <a href="contact">contact</a> | <a href="move">move</a> |
+          <a href="./w">words</a> |
+          <a href="projects">projects</a>
+        </p>
+      </div>
+      <div id="column-right"></div>
     </div>
   </body>
 </html>
